fix: implement admin panel with bug fixes across mobile and backend